# 2KyrsLABA7

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: Duplicates.h  FileHash.h  FileScanner.h  Parser.h
src/: Duplicates.cpp  FileHash.cpp  FileScanner.cpp  Parser.cpp  main.cpp
